--- a/src/components/Admin/Content/Quiz/ManageQuiz.scss
+++ b/src/components/Admin/Content/Quiz/ManageQuiz.scss
@@ -1,10 +1,13 @@
 .quiz-container{
-    padding: 15px;
+    // padding: 15px;
     .title{
         font-size: 25px;
         font-weight: 60px;
     }
     legend{
         font-size: 13px;
+    }
+    .list-detail{
+        padding: 15px;
     }
 }
